ChangeLog for Nicotine Plus

Unreleased 1.2.5pre
 * Made many of the Main Menu items have icons.
 * Added three new menu options under help: Offline Nicotine Plus Guide, the 
   Nicotine-Plus Trac and the Nicotine Plus Sourceforge Project websites. 
 * Added NicotinePlusGuide to setup.py, so it will be installed
 * Fixed a typo in transferlist.py 
 * Notifications: Now testing 'flite' support, a text-to-speech engine.
   This may or may not be removed. The option is 'speechenabled'
 * Moved Icon theme and Sound theme settings inside seperate expanders.
 * Notifications: Added a sound effect, room_nick.ogg, for nick-mention in 
   chatrooms (when not in that room) and a seperate sound effect, private.ogg, 
   for when a private message arrives, and you are not in that tab. Sound 
   options are found in the UI settings, and seperate sound theme directories
   and audio players can be selected, as well. Ogg files are installed into
   $PREFIX/share/nicotine/$THEMEDIR/
 * Made Trayicon toggleable while running from the UI settings or at startup 
   with --enable-trayicon, -t  and --disable-trayicon, -d
 * Made /search commands modify the search history
 * Added 'clear search history' button to search
 * Shortened Search tab length and added a label containing the full query 
   next to the "Enable filters" checkbox.
 * Added confirmation exit popup dialog when quiting with the window manager.
 * Replaced "pure text" percent column with a CellRendererProgress column
 * Added support for sending and recieving Soulseek peer message 52, Upload
   Queue Notification, which allows users to notify upload recipients that 
   they are attempting to send a file. Also, a log message is printed when a 
   user attempts to send you file(s) and an automatic is sent if they aren't 
   allowed to.
 * Added option to UI Settings to show/hide the transfer buttons.
 * Added expander to glade2py, so it can now be used.