@@ -3,6 +3,7 @@
 import gtk
 import os
 import urllib
+import gobject
 
 from userinfo import UserTabs
 from nicotine_glade import UserBrowseTab
@@ -31,12 +32,22 @@ class UserBrowse(UserBrowseTab):
 		self.selected_files = []
 		
 		self.list = {}
+		self.Elist = {}
 
 		self.encoding, m = EncodingsMenu(self.frame.np, "userencoding", user)
+		
+		self.EncodingStore = gtk.ListStore(gobject.TYPE_STRING, gobject.TYPE_STRING)
+		self.Encoding.set_size_request(100, -1)
+		self.Encoding.set_model(self.EncodingStore)
+		cell2 = gtk.CellRendererText()
+		self.Encoding.pack_start(cell2, False)
+	
+		self.Encoding.add_attribute(cell2, 'text', 1)
+		
 		for item in m:
-			self.Encoding.append_text(item)
-		if self.encoding in m:
-			self.Encoding.set_active(m.index(self.encoding))
+			self.Elist[item[1]] = self.EncodingStore.append([item[1], item[0] ])
+			if self.encoding == item[1]:
+				self.Encoding.set_active_iter(self.Elist[self.encoding])
 		
 		renderer = gtk.CellRendererText()
 		column = gtk.TreeViewColumn(_("Share tree"), renderer, text = 0)
