@@ -3,6 +3,7 @@
 import os
 import gtk
 import tempfile
+import gobject
 
 from nicotine_glade import UserInfoTab
 from utils import IconNotebook, PopupMenu, EncodingsMenu, SaveEncoding,  Humanize
@@ -87,11 +88,19 @@ class UserInfo(UserInfoTab):
 		self.conn = conn
 		self._descr = ""
 		
-		self.encoding, m  = EncodingsMenu(self.frame.np, "userencoding", user)
+		self.Elist = {}
+		self.encoding, m = EncodingsMenu(self.frame.np, "userencoding", user)
+		self.EncodingStore = gtk.ListStore(gobject.TYPE_STRING, gobject.TYPE_STRING)
+		self.Encoding.set_size_request(100, -1)
+		self.Encoding.set_model(self.EncodingStore)
+		cell2 = gtk.CellRendererText()
+		self.Encoding.pack_start(cell2, False)
+		self.Encoding.add_attribute(cell2, 'text', 1)
 		for item in m:
-			self.Encoding.append_text(item)
-		if self.encoding in m:
-			self.Encoding.set_active(m.index(self.encoding))
+			self.Elist[item[1]] = self.EncodingStore.append([item[1], item[0] ])
+			if self.encoding == item[1]:
+				self.Encoding.set_active_iter(self.Elist[self.encoding])
+
 
 	def ShowLocalInfo(self, user, descr, has_pic, pic, totalupl, queuesize, slotsavail):
 		self.conn = None
